@@ -23,5 +23,14 @@
             <field name="type">tree</field>
             <field name="name">endorsement_field_list</field>
         </record>
+        <!-- ########################### -->
+        <!-- # Endorsement Beneficiary # -->
+        <!-- ########################### -->
+        <record model="endorsement.part" id="change_beneficiary_revision_part">
+            <field name="code">change_beneficiary</field>
+            <field name="name">Change Beneficiaries</field>
+            <field name="kind">option</field>
+            <field name="view">manage_beneficiaries</field>
+        </record>
     </data>
 </tryton>
